# adj-valet

./: .gitignore  README.md  RELEASE-GUIDE.md  package-lock.json  release.sh  run.sh  shell.nix  test_backend.sh
.github/workflows/: manual-release.yml  release.yml
adj-valet-front/: index.html  package-lock.json  package.json  tsconfig.json
adj-valet-front/public/: .adj-valet-port
adj-valet-front/src/: App.tsx  index.css
adj-valet-front/src/api/: api.ts  mock.ts
adj-valet-front/src/components/: ArrayObjForm.tsx  BoardForm.tsx  Button.tsx  GeneralInfoForm.tsx  Input.tsx  ListItem.tsx  LoadingSpinner.tsx  MeasurementCard.tsx  MeasurementForm.tsx  Modal.tsx  PacketCard.tsx  PacketForm.tsx  SimpleBoardForm.tsx  SimpleMeasurementForm.tsx  SimplePacketForm.tsx
adj-valet-front/src/context/: ADJContext.ts
adj-valet-front/src/layout/: Content.tsx  Sidebar.tsx
adj-valet-front/src/store/: ADJStore.ts
adj-valet-front/src/types/: ADJ.ts  Board.ts  GeneralInfo.ts  Measurement.ts  Packet.ts
adj-valet-front/src/utils/: validation.ts
backend/: Cargo.toml  Dockerfile  README.md  __init__.py  api.py  data_ingestion.py  diff_merge.py  file_writer.py  json_assembler.py  main.py  path.py
backend/src/: config.rs  error.rs  main.rs
release/adj-valet/: ADJ-SPEC.md  README.md  adj-valet-backend  start.sh
release/adj-valet/web/: index.html
release/adj-valet/web/assets/: index-CQjwcmXI.css  index-D52YFUSJ.js
